# document-scanner-cli

./: CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
document_scanner_cli/: __init__.py  api.py  config.py  exit_codes.py  log.py  main.py  output.py  update_check.py
document_scanner_cli/commands/: __init__.py  completion.py  doctor.py  documents.py  login.py  metrics.py  scanner.py  status.py  sync.py
scripts/: build_binary.sh  build_wheel.sh  sega_package.sh
tests/: test_cli_smoke.py
